# Auto_GM

./: .gitignore  README.md  main.py  requirements.txt  另一种技术方案.md  另一种技术方案_改.md
backend/: pyproject.toml
backend/src/autogm_api/: __init__.py  main.py  settings.py
backend/src/autogm_api/routes/: backtests.py  health.py  market_data.py  overview.py  risk.py  strategies.py  system_logs.py
backend/src/autogm_api/schemas/: backtests.py  common.py  logs.py  market_data.py  overview.py  risk.py  strategies.py
backend/src/autogm_api/services/: mock_data.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  mockFallback.ts  types.ts
